fix ingridient, add observe
